--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+    <ol>My Project List</ol>
+        <li href="https://seltzerjosh.github.io/th-js-project-01-RQG/">Quotes Site</li>
 </body>
 </html>
