--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>I am Josh Seltzer.</h1>
+<p>Welcome to my page.</p>
 <h2>My Project List</h2>
 <li><a href="https://seltzerjosh.github.io/th-js-project-01-RQG/">Quotes Site</a></li>
 </body>
