--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>Welcome to my page.</p>
 <h2>My Project List</h2>
 <li><a href="https://seltzerjosh.github.io/th-js-project-01-RQG/">Quotes Site</a></li>
-<li><a href="https://seltzerjosh.github.io/rsvp-app">RSVP App</a></li>
+<!--<li><a href="https://seltzerjosh.github.io/rsvp-app">RSVP App</a></li>-->
 
 </body>
 </html>
