added a new project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h2>My Project List</h2>
 <li><a href="https://seltzerjosh.github.io/th-js-project-01-RQG/">Quotes Site</a></li>
 <li><a href="https://seltzerjosh.github.io/rsvp-app/">RSVP App</a></li>
+<li><a href="https://www.seltzerjosh.github.io/personnel-directory/">Personnel Directory</a></li>
 
 </body>
 </html>
