--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <h1>I am Josh Seltzer.</h1>
 <p>Welcome to my page.</p>
 <h2>My Project List</h2>
-<li><a href="https://seltzerjosh.github.io/th-js-project-01-RQG/">Quotes Site</a></li>
-<li><a href="https://seltzerjosh.github.io/rsvp-app/">RSVP App</a></li>
-<li><a href="https://www.seltzerjosh.github.io/personnel-directory/">Personnel Directory</a></li>
+<li><a href="https://seltzerjosh.io/th-js-project-01-RQG/">Quotes Site</a></li>
+<li><a href="https://seltzerjosh.io/rsvp-app/">RSVP App</a></li>
+<li><a href="https://seltzerjosh.io/personnel-directory/">Personnel Directory</a></li>
 
 </body>
 </html>
