--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <li><a href="https://seltzerjosh.io/th-js-project-01-RQG/">Quotes Site</a></li>
 <li><a href="https://seltzerjosh.io/rsvp-app/">RSVP App</a></li>
 <li><a href="https://seltzerjosh.io/personnel-directory/">Personnel Directory</a></li>
+<li><a href="https://seltzerjosh.io/intearctive-form/">Interactive Form</a></li>
 
 </body>
 </html>
