--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <li><a href="https://seltzerjosh.io/rsvp-app/">RSVP App</a></li>
 <li><a href="https://seltzerjosh.io/personnel-directory/">Personnel Directory</a></li>
 <li><a href="https://seltzerjosh.io/intearctive-form/">Interactive Form</a></li>
+<li><a href="https://seltzerjosh.io/Hangman-App/">Phrase Hunter</a></li>
 
 </body>
 </html>
